-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: port-stage-aarch64
-
Component/s: hotspot
-
None
-
aarch64
-
linux
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8260795 | openjdk8u292 | Andrew Hughes | P4 | Resolved | Fixed | b01 |
Openjdk test compiler/types/TestMeetIncompatibleInterfaceArrays.java causes JVM crash by "guarantee" assertion on ARM 64 8u112 build.
Affected both client and server compilers.
Oracle JDK 8u112 is NOT affected.
Partly log:
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (assembler_aarch64.hpp:238), pid=6396, tid=0x0000007f8de73200
# guarantee(val < (1U << nbits)) failed: Field too big for insn
Affected both client and server compilers.
Oracle JDK 8u112 is NOT affected.
Partly log:
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (assembler_aarch64.hpp:238), pid=6396, tid=0x0000007f8de73200
# guarantee(val < (1U << nbits)) failed: Field too big for insn
- backported by
-
JDK-8260795 aarch64: jtreg test compiler/types/TestMeetIncompatibleInterfaceArrays.java causes JVM crash
-
- Resolved
-
- relates to
-
JDK-8257192 Integrate AArch64 JIT port into 8u
-
- Resolved
-