8170188: jtreg test compiler/types/TestMeetIncompatibleInterfaceArrays.java causes JVM crash Contributed-by: snazarki Reviewed-by: aph, adinn