src/cpu/aarch64/vm/interp_masm_aarch64.hpp
@@ -234,7 +234,8 @@ class InterpreterMacroAssembler: public MacroAssembler {
                              bool decrement = false);
   void increment_mask_and_jump(Address counter_addr,
                                int increment, int mask,
-                               Register scratch, bool preloaded,
+                               Register scratch, Register scratch2,
+			       bool preloaded,
                                Condition cond, Label* where);
   void set_mdp_flag_at(Register mdp_in, int flag_constant);
   void test_mdp_data_at(Register mdp_in, int offset, Register value,
